src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__function_has_super_class.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
error[E110]: Subclassing is only allowed in `CLASS` and `FUNCTION_BLOCK`
  ┌─ <internal>:5:18
  │
5 │         FUNCTION func EXTENDS cls
  │                  ^^^^ Subclassing is only allowed in `CLASS` and `FUNCTION_BLOCK`
